Fix auto-scaling issues and remove deprecated constructor call